fixed the alignment in main program

--- a/Home/Home_style.css
+++ b/Home/Home_style.css
@@ -153,7 +153,12 @@ body {
     width: fit-content;
     height: 20vh;
   }
-
+  .programs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .part1 {
     justify-content: left;
     font-family: "Gothic A1", sans-serif;
@@ -224,12 +229,11 @@ body {
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
-    line-height: 30px;
     letter-spacing: -0.143px;
     padding: 20px;
-    width: 100px;
-    height: 40px;
-    margin-right: 5vh;
+    width: 100px !important;
+    margin-right: 10vh;
+    box-sizing: border-box;
   }
 
   .desc-3 {
@@ -333,9 +337,16 @@ body {
   .hidden {
     display: none;
   }
-
+  .r1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   #hiddenDiv {
-    padding-left: 5vh;
+    display: flex;
+    padding-left: 0vh;
+    flex-direction: column;
+    align-items: center;
   }
 
   .partners {
@@ -348,6 +359,9 @@ body {
 
   .Program:hover {
     border: 2px solid white;
+  }
+  .chinese {
+    display: none;
   }
 }
 
@@ -518,7 +532,7 @@ body {
     font-weight: 400;
     line-height: 28px;
     letter-spacing: -0.8px;
-    margin: 10vh 0 5vh 0;
+    margin: 10vh 0 0vh 0;
   }
 
   .MainProgram hr {
@@ -530,6 +544,7 @@ body {
   .programs {
     width: 70%;
     display: flex;
+    margin-top: 10vh;
     margin-bottom: 10vh;
     align-items: flex-start;
     justify-content: center;
@@ -591,10 +606,12 @@ body {
     border: none;
   }
   .projects {
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5vh;
+    margin-bottom: 10vh;
   }
 
   .Sponsors {
@@ -604,6 +621,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  .Sponsors hr {
+    width: 51px;
+    color: #a04038;
   }
 
   .sponsor {
@@ -629,12 +650,13 @@ body {
     font-weight: 700;
     line-height: normal;
     letter-spacing: -0.3px;
+    margin: 0%;
   }
 
   .designation {
     color: #f78c89;
     font-family: "Lato", sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     font-style: normal;
     font-weight: 700;
     line-height: 20px;
@@ -675,7 +697,7 @@ body {
 
   #hiddenDiv {
     padding: 0%;
-    margin: 0%;
+    margin-top: 5vh;
   }
 
   .partners {
@@ -683,7 +705,7 @@ body {
     background: #414246;
     flex-direction: column;
     align-items: center;
-    padding: 10vh 0;
+    padding: 5vh 0;
   }
 
   .partners hr {
@@ -692,21 +714,25 @@ body {
     background-color: #a04038;
     border: none;
   }
-
+  .partners div {
+    margin-top: 5vh;
+  }
   .partners img {
     width: 150px;
     height: 100px;
     margin: 0 5vh;
+    filter: grayscale(100%);
   }
 
   .desc8 {
-    color: #fff;
+    color: #8f8f91;
     font-family: "Lato", sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 28px;
-    letter-spacing: -0.4px;
+    letter-spacing: -0.3px;
+    margin-bottom: 0%;
   }
 
   .credits {
@@ -720,15 +746,40 @@ body {
     font-weight: 700;
     line-height: 13.078px;
     letter-spacing: -0.1px;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
   }
 
   .credits img {
     margin: 0 5vh;
-    width: 135px;
-    height: 31.985px;
+    width: 250px;
+    height: 65px;
+    padding: 0%;
   }
-
+  .credits p {
+    color: #000;
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -0.14px;
+  }
+  .chinese {
+    margin-top: 5vh;
+    color: #000;
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: -0.56px;
+  }
+  .ob {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+  }
   .Program:hover {
     border: 2px solid white;
   }
